# weather_machine

./: README.md  pyproject.toml
src/weather_machine/: main.py
